# recount-stack

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  justfile  package-lock.json  package.json
infra/nginx/: Dockerfile  nginx.conf  nginx.dev.conf
infra/postgres/: init.sql
services/app/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
services/app/src/: App.vue  style.css
services/app/src/columns/: exonColumns.ts  geneColumns.ts  projectColumns.ts
services/app/src/components/: AppSidebar.vue
services/app/src/composables/: useExonData.ts  useGeneData.ts  useProjectData.ts  useVisibility.ts
services/app/src/pages/: ProjectDetailsPage.vue  ProjectsPage.vue
services/app/src/router/: index.ts
services/loader/: Dockerfile  pyproject.toml
services/loader/src/loader/: __init__.py  loader.py
services/server/: .dockerignore  Dockerfile  cl.txt  pyproject.toml
services/server/config/: gunicorn.py
services/server/src/server/: __init__.py  app.py
services/server/src/server/db/: connection.py
services/server/src/server/db/queries/: gene.py
services/server/src/server/services/: cache_service.py  data_service.py
