[project]
name = "loader"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyrecount = { git = "https://github.com/dfrll/pyrecount.git" }
python-dotenv = ">=1.1.1,<2.0.0"
pyarrow = ">=21.0.0,<22.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pandas = ">=2.3.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry]
packages = [{ include = "loader", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
